<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Network Scheduler</string>
    
    <string name="global_switch_on_toast">Network Scheduler is enabled</string>
    <string name="global_switch_off_toast">Network Scheduler is completely disabled</string>
    
    <string name="start_text">on</string>
    <string name="next_day">next day</string>
    <string name="interval_text">Interval connection</string>
    <string name="interval_connection_help_content_desc">Show help on interval connection</string>
    <string name="explain_interval_connection_title">Interval Connection</string>
    <string name="explain_interval_connection_intro">This option saves battery and reduces data usage</string>
    <string name="explain_interval_connection_text">Interval connection turns off %1$s when the device is not used and only re-connects every %2$s min for %3$s min (interval and duration can be changed in settings) to fetch new messages. It is also turned on when the device is unlocked.</string>
    <string name="close_dialog">Close</string>
    <string name="stop_text">off</string>
    <string name="volume_with_vibrate">Vibrate when silent</string>
    
    <string name="interval_connect_disabling_period">Interval connection is not possible when switch-off is before switch-on</string>
    
    <!-- Context menu actions -->
    <string name="modify">Edit</string>
    <string name="activate_now">Activate now (switch ON)</string>
    <string name="deactivate_now">Deactivate now (switch OFF)</string>
    <string name="activate_now_off">Activate now (switch OFF)</string>
    <string name="deactivate_now_on">Deactivate now (switch ON)</string>
    <string name="skip_next_occurrence">Skip next occurrence</string>
    <string name="is_period_enabled">Enabled</string>
    <string name="context_menu_interval_wifi">Wi-Fi interval connection</string>
    <string name="context_menu_interval_mob">Mobile data interval connection</string>
    <string name="delete">Delete</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    
    <!-- Context menu actions -->
    <string name="skipped_period">The next time period will be skipped</string>
    <string name="unskipped_period">The next time period will be activated normally</string>
    <string name="overridden_wifi_interval">For this period Wi-Fi interval connection was stopped</string>
    <string name="unoverridden_wifi_interval">Wi-Fi interval connection was resumed</string>
    <string name="overridden_mob_interval">For this period mobile data interval connection was stopped</string>
    <string name="unoverridden_mob_interval">Mobile data interval connection was resumed</string>
    
    <string name="name_hint">Name (optional)</string>
    <string name="mobile_data">Mobile data</string>
    <string name="wifi">Wi-Fi</string>
    <string name="volume_on">Ringer sound</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="switch_off_shortly">"Switching off shortly: "</string>
    
    <string name="switch_off_auto_delayed">Switch-off auto-delayed</string>
    <string name="switch_off_delayed_until">Switch off delayed until %s</string>
    <string name="switch_off_auto_delayed_until">Delayed until %s because device was in use</string>
    <string name="switch_off_skipped_today">Switch off skipped today</string>
    
    <string name="everyday">Everyday</string>
    <string name="never">Never</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="switch_off_notification_title">Switching off network</string>
    <string name="not_today">not today</string>
    <string name="switch_off_now">switch off now</string>
    <string name="connections_switched_off">Network connections switched off</string>
    
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="help_url">https://sites.google.com/site/networkscheduler/learn-more</string>
    
    <string name="settings_title_interval_connect">Interval Connection</string>
    <string name="settings_title_notifications">Switch-Off Notification</string>
    
    <string name="pref_title_warn_switchoff">Switch-off warning</string>
    <string name="pref_summary_warn_switchoff">Show a notification before deactivating connections when the screen is on</string>
    <string name="pref_title_warn_only_screen_on">Warn only if screen is on</string>
    <string name="pref_summary_warn_only_screen_on">Suppress the switch-off warning if the screen is dark</string>
    <string name="pref_title_warn_vibrate">Vibrate</string>
    <string name="pref_summary_warn_vibrate">Vibrate to make sure the switch-off warning is not missed e.g. when watching a full-screen video</string>
    <string name="pref_title_warn_sound">Play sound</string>
    <string name="pref_summary_warn_sound">Play the notification sound to make sure the switch-off warning is not missed</string>
    
    <string name="pref_key_delay_min">pref_key_delay_min</string>
    <string name="pref_title_delay_min">Switch-off delay: %s min</string>
    <string name="pref_summary_delay_min">Deactivation can be delayed by %s minutes in the switch-off notification</string>
    <string name="pref_dialog_title_delay_min">Switch-off delay (minutes)</string>
    
    <string name="pref_title_notify_each_action">Notification after each activation or deactivation</string>
    <string name="pref_summary_notify_each_action">Show a notification each time a network connection was activated or deactivated</string>
    <string name="pref_title_no_switchoff_unlocked">Auto-delay if screen on</string>
    <string name="pref_summary_no_switchoff_unlocked">Automatically delay the switch-off if the screen is on</string>
    
    <string name="pref_title_interval_connect_wifi">Wi-Fi interval connection</string>
    <string name="pref_summary_interval_connect_wifi">Switch on Wi-Fi only every %s minutes to fetch messages (only when active)</string>
    <string name="pref_title_interval_connect_wifi_keep_connected">Keep Wi-Fi connected</string>
    <string name="pref_summary_interval_connect_wifi_keep_connected">Interval connection will not switch-off Wi-Fi when connected to a hot-spot (e.g. at home)</string>
 	<string name="pref_title_interval_connect_mobiledata">Mobile data interval connection</string>
    <string name="pref_summary_interval_connect_mobiledata">Switch on mobile data only every %s minutes to fetch messages (only when active)</string>
    
    <string name="pref_key_connect_interval">pref_key_connect_interval</string>
    <string name="pref_title_connect_interval">Connect interval: %s min</string>
    <string name="pref_summary_connect_interval">Connect every %s minutes for the short connection duration specified below</string>
    <string name="pref_dialog_title_connect_interval">Interval (min)</string>

    <string name="pref_key_connect_duration">pref_key_connect_duration</string>
    <string name="pref_title_connect_duration">Connection duration: %s min</string>
    <string name="pref_summary_connect_duration">Connect for %s minute(s) to fetch messages</string>
    <string name="pref_dialog_title_connect_duration">Duration (min)</string>
    
</resources>